Versão final da qualificação

--- a/references.bib
+++ b/references.bib
@@ -41,7 +41,7 @@
 }
 
 @inproceedings{park2018formal-05,
-  title={A formal verification tool for Ethereum VM bytecode},
+  title={A formal verification tool for {E}thereum {VM} bytecode},
   author={Park, Daejun and Zhang, Yi and Saxena, Manasvi and Daian, Philip and Ro{\c{s}}u, Grigore},
   booktitle={Proceedings of the 2018 26th ACM Joint Meeting on European Software Engineering Conference and Symposium on the Foundations of Software Engineering},
   pages={912--915},
@@ -287,9 +287,9 @@
 }
 
 @inproceedings{frank2020ethbmc-32,
-  title={$\{$ETHBMC$\}$: A Bounded Model Checker for Smart Contracts},
+  title={ETHBMC: A Bounded Model Checker for Smart Contracts},
   author={Frank, Joel and Aschermann, Cornelius and Holz, Thorsten},
-  booktitle={29th $\{$USENIX$\}$ Security Symposium ($\{$USENIX$\}$ Security 20)},
+  booktitle={29th USENIX Security Symposium (USENIX Security 20)},
   pages={2757--2774},
   year={2020}
 }
@@ -421,7 +421,7 @@
 
 @inproceedings{bhargavan2016formal-47,
   title={Formal verification of smart contracts: Short paper},
-  author={Bhargavan, Karthikeyan and Delignat-Lavaud, Antoine and Fournet, C{\'e}dric and Gollamudi, Anitha and Gonthier, Georges and Kobeissi, Nadim and Kulatova, Natalia and Rastogi, Aseem and Sibut-Pinote, Thomas and Swamy, Nikhil and others},
+  author={Bhargavan, Karthikeyan and Delignat-Lavaud, Antoine and Fournet, C\'{e}dric and Gollamudi, Anitha and Gonthier, Georges and Kobeissi, Nadim and Kulatova, Natalia and Rastogi, Aseem and Sibut-Pinote, Thomas and Swamy, Nikhil and Zanella-B\'eguelin, Santiago},
   booktitle={Proceedings of the 2016 ACM workshop on programming languages and analysis for security},
   pages={91--96},
   year={2016}
@@ -658,7 +658,7 @@
 }
 
 @inproceedings{chang2019scompile-74,
-  title={sCompile: Critical path identification and analysis for smart contracts},
+  title={SCompile: Critical path identification and analysis for smart contracts},
   author={Chang, Jialiang and Gao, Bo and Xiao, Hao and Sun, Jun and Cai, Yan and Yang, Zijiang},
   booktitle={International Conference on Formal Engineering Methods},
   pages={286--304},
@@ -747,13 +747,12 @@
   publisher={ACM New York, NY, USA}
 }
 
-@article{zhuangsmart-84,
-  title={Smart Contract Vulnerability Detection Using Graph Neural Networks},
-  author={Zhuang, Yuan and Liu, Zhenguang and Qian, Peng and Liu, Qi and Wang, Xiang and He, Qinming}
-  booktitle={Proceedings of the 29th International Joint Conference on Artificial Intelligence ( (IJCAI)
-},
-  pages={3283--3290},
-  year={2020}
+@inproceedings{zhuangsmart-84,
+ author={Zhuang, Y. and Liu, Z. and Qian, P. and Liu, Q. and Wang, X. and He, Q.},
+ title={Smart contract vulnerability detection using graph neural networks},
+ booktitle={Proceedings of the Twenty-Ninth International Joint Conference on Artificial Intelligence (IJCAI-20)},
+ pages={3283-3290},
+ year={2020}
 }
 
 @inproceedings{tikhomirov2018smartcheck-85,
@@ -792,7 +791,7 @@
 }
 
 @inproceedings{hajdu2019solc-89,
-  title={solc-verify: A modular verifier for Solidity smart contracts},
+  title={Solc-verify: A modular verifier for Solidity smart contracts},
   author={Hajdu, {\'A}kos and Jovanovi{\'c}, Dejan},
   booktitle={Working Conference on Verified Software: Theories, Tools, and Experiments},
   pages={161--179},
@@ -827,7 +826,7 @@
 }
 
 @inproceedings{krupp2018teether-93,
-  title={teether: Gnawing at ethereum to automatically exploit smart contracts},
+  title={Teether: Gnawing at ethereum to automatically exploit smart contracts},
   author={Krupp, Johannes and Rossow, Christian},
   booktitle={27th $\{$USENIX$\}$ Security Symposium ($\{$USENIX$\}$ Security 18)},
   pages={1317--1333},
@@ -837,7 +836,7 @@
 @inproceedings{torres2019art-94,
   title={The art of the scam: Demystifying honeypots in ethereum smart contracts},
   author={Torres, Christof Ferreira and Steichen, Mathis and others},
-  booktitle={28th $\{$USENIX$\}$ Security Symposium ($\{$USENIX$\}$ Security 19)},
+  booktitle={28th USENIX Security Symposium (USENIX Security 19)},
   pages={1591--1607},
   year={2019}
 }
@@ -961,11 +960,11 @@ keywords = {Ethereum, security, Blockchain, smart contract}
 %OVERVIEW SOBRE BLOCKCHAIN E ALGORITMOS DE CONSENSO
 %%%%%%%%%
 @ARTICLE{consenso-xiao-2020,  
-author={Y. {Xiao} and N. {Zhang} and W. {Lou} and Y. T. {Hou}},  journal={IEEE Communications Surveys   Tutorials},   title={A Survey of Distributed Consensus Protocols for Blockchain Networks},   year={2020},  volume={22},  number={2},  pages={1432-1465},  doi={10.1109/COMST.2020.2969706}
+author={Y. Xiao and N. Zhang and W. Lou and Y. T. Hou},  journal={IEEE Communications Surveys   Tutorials},   title={A Survey of Distributed Consensus Protocols for Blockchain Networks},   year={2020},  volume={22},  number={2},  pages={1432-1465},  doi={10.1109/COMST.2020.2969706}
 }
 
 @ARTICLE{overview-dinh-2018,  
-author={T. T. A. {Dinh} and R. {Liu} and M. {Zhang} and G. {Chen} and B. C. {Ooi} and J. {Wang}},  journal={IEEE Transactions on Knowledge and Data Engineering},   title={Untangling Blockchain: A Data Processing View of Blockchain Systems},   year={2018},  volume={30},  number={7},  pages={1366-1385},  doi={10.1109/TKDE.2017.2781227}
+author={T. T. A. Dinh and R. Liu and M. Zhang and G. Chen and B. C. Ooi and J. Wang},  journal={IEEE Transactions on Knowledge and Data Engineering},   title={Untangling Blockchain: A Data Processing View of Blockchain Systems},   year={2018},  volume={30},  number={7},  pages={1366-1385},  doi={10.1109/TKDE.2017.2781227}
 }
 
 @inproceedings{overview-ahmed-2019,
@@ -1085,7 +1084,7 @@ numpages = {3}
 
 @inproceedings{overview-byzantine1999castro,
   title={Practical byzantine fault tolerance},
-  author={Castro, Miguel and Liskov, Barbara and others},
+  author={Castro, Miguel and Liskov, Barbara},
   booktitle={OSDI},
   volume={99},
   number={1999},
@@ -1132,7 +1131,7 @@ series = {EuroSys '18}
 
 @article{overview-schwartz2014ripple,
   title={The ripple protocol consensus algorithm},
-  author={Schwartz, David and Youngs, Noah and Britto, Arthur and others},
+  author={Schwartz, David and Youngs, Noah and Britto, Arthur},
   journal={Ripple Labs Inc White Paper},
   url={https://cryptoguide.ch/cryptocurrency/ripple/whitepaper.pdf},
   volume={5},
@@ -1142,7 +1141,7 @@ series = {EuroSys '18}
 }
 
 @INPROCEEDINGS{overview-consenso2017sankar,
-  author={L. S. {Sankar} and M. {Sindhu} and M. {Sethumadhavan}},
+  author={L. S. Sankar and M. Sindhu and M. Sethumadhavan},
   booktitle={2017 4th International Conference on Advanced Computing and Communication Systems (ICACCS)}, 
   title={Survey of consensus protocols on blockchain applications}, 
   year={2017},
@@ -1161,7 +1160,7 @@ series = {EuroSys '18}
 
 @article{wood2014ethereum-yellow-paper,
   title={Ethereum: A secure decentralised generalised transaction ledger},
-  author={Wood, Gavin and others},
+  author={Wood, Gavin},
   journal={Ethereum project yellow paper},
   volume={151},
   number={2014},
@@ -1236,7 +1235,7 @@ note={Acesso em: 17 fev. 2021}
 }
 
 @misc{ethereum-homestead2020documentation,
-author={{Ethereum community}},
+author={{ETHEREUM COMMUNITY}},
 title={Ethereum Homestead Documentation},
 year={2018},
 url={https://ethdocs.org/en/latest/},
@@ -1253,7 +1252,7 @@ note={Acesso em: 21 fev. 2021}
 
 @misc{consensys2021bestpractices,
   title={Ethereum Smart Contract Best Practices},
-  author={{ConsenSys Diligence}},
+  author={{CONSENSYS DILIGENCE}},
   year={2021},
   url={https://consensys.github.io/smart-contract-best-practices/},
   note={Acesso em: 20 fev. 2021}
@@ -1296,7 +1295,7 @@ note={Acesso em: 02 mar. 2021}
 }
 
 @INPROCEEDINGS{angelo2020tokens,
-  author={M. {di Angelo} and G. {Salzer}},
+  author={M. {DI ANGELO} and G. Salzer},
   booktitle={2020 IEEE International Conference on Decentralized Applications and Infrastructures (DAPPS)}, 
   title={Tokens, Types, and Standards: Identification and Utilization in Ethereum}, 
   year={2020},
@@ -1305,7 +1304,7 @@ note={Acesso em: 02 mar. 2021}
   }
   
 @ARTICLE{monrat2019survey-blockchain-ieee,
-author={A. A. {Monrat} and O. {Schelén} and K. {Andersson}},
+author={A. A. Monrat and O. Schelén and K. Andersson},
 journal={IEEE Access}, 
 title={A Survey of Blockchain From the Perspectives of Applications, Challenges, and Opportunities}, 
 year={2019},
@@ -1359,7 +1358,7 @@ note={Acesso em: 23 fev. 2021}
 }
 
 @ARTICLE{wang2019DAO-survey,
-author={S. {Wang} and W. {Ding} and J. {Li} and Y. {Yuan} and L. {Ouyang} and F. {Wang}},
+author={S. Wang and W. Ding and J. Li and Y. Yuan and L. Ouyang and F. Wang},
 journal={IEEE Transactions on Computational Social Systems}, 
 title={Decentralized Autonomous Organizations: Concept, Model, and Applications}, 
 year={2019},
@@ -1517,9 +1516,9 @@ keywords = {security, privacy, Blockchain}
 }
 
 @ARTICLE{salah2019review-blockchain-ai,
-author={K. {Salah} and M. H. U. {Rehman} and N. {Nizamuddin} and A. {Al-Fuqaha}},
+author={K. Salah and M. H. U. Rehman and N. Nizamuddin and A. Al-Fuqaha},
 journal={IEEE Access}, 
-title={Blockchain for AI: Review and Open Research Challenges}, 
+title={Blockchain for {AI}: Review and Open Research Challenges}, 
 year={2019},
 volume={7},
 number={},
@@ -1680,7 +1679,7 @@ doi={10.1109/ACCESS.2018.2890507}
 
 @book{clarke2018model,
   title={Model checking},
-  author={{Clarke Jr}, Edmund M and Grumberg, Orna and Kroening, Daniel and Peled, Doron and Veith, Helmut},
+  author={{CLARKE JR}, Edmund M and Grumberg, Orna and Kroening, Daniel and Peled, Doron and Veith, Helmut},
   year={2018},
   publisher={MIT press}
 }
@@ -1789,4 +1788,47 @@ doi={10.1109/ACCESS.2018.2890507}
   pages={11--18},
   year={2008},
   organization={Springer}
+}
+
+@book{huth2004logic,
+  title={Logic in Computer Science: Modelling and Reasoning about Systems},
+  author={Huth, M. and Ryan, M.},
+  isbn={9781139453059},
+  year={2004},
+  publisher={Cambridge University Press}
+}
+
+@mastersthesis{mura2016,
+	Address = {Londrina-PR},
+	Author = {Della Mura, W. A.},
+	School = {Universidade Estadual de Londrina},
+	Title = {Detecção de conflitos em contratos multilaterais},
+	pages={133},
+	year = {2016}
+}
+
+@article{muller1999invited,
+	title={Invited Talks and Tutorials-Model-Checking. A Tutorial Introduction},
+	author={Muller-Olm, Markus and Schmidt, David and Steffen, Bernhard},
+	journal={Lecture Notes in Computer Science},
+	volume={1694},
+	pages={330--354},
+	year={1999},
+	publisher={Berlin: Springer-Verlag, 1973-}
+}
+
+@book{katoen1999concepts,
+	title={Concepts, algorithms, and tools for model checking},
+	author={Katoen, Joost-Pieter},
+	year={1999},
+	publisher={IMMD Erlangen}
+}
+
+@book{baier2008principles,
+  title={Principles of Model Checking},
+  author={Baier, C. and Katoen, J.P.},
+  isbn={9780262026499},
+  lccn={2007037603},
+  year={2008},
+  publisher={MIT Press}
 }
