--- a/tabelas/rq5-procedimentos-manuais.tex
+++ b/tabelas/rq5-procedimentos-manuais.tex
@@ -3,22 +3,21 @@
 \fontsize{8pt}{8pt}\selectfont
 \caption{Procedimentos manuais realizados nos métodos semi-automatizados}
 \label{tab:rq5-procedimentos-manuais}
-\begin{tabular}{l|llll}
-\multirow{\textbf{Abordagem}}                                          & \multicolumn{4}{c}{\textbf{Procedimentos manuais}}                  \\
- &
-  \textbf{Tradução de código} &
-  \textbf{Obtenção do modelo} &
-  \textbf{\begin{tabular}[c]{@{}l@{}}Especificação das \\ propriedades\end{tabular}} &
-  \textbf{\begin{tabular}[c]{@{}l@{}}Análise e interpretação\\ dos resultados\end{tabular}} \\ \hline
-\textbf{\begin{tabular}[c]{@{}l@{}}Análise \\ estática\end{tabular}}         & \#69       &                  & \#07                    &            \\ \hline
-\textbf{\begin{tabular}[c]{@{}l@{}}Execução \\ simbólica\end{tabular}}       & \#97       &                  & \#07, \#38, \#97, \#104 & \#38       \\ \hline
-\textbf{\begin{tabular}[c]{@{}l@{}}Demonstração \\ de teoremas\end{tabular}} &            & \#03, \#43       & \#38, \#43              & \#38, \#43 \\ \hline
-\textbf{\begin{tabular}[c]{@{}l@{}}Model \\ checking\end{tabular}} &
-  \#11, \#22, \#45, \#59, \#78 &
-  \begin{tabular}[c]{@{}l@{}}\#11, \#22, \#41, \#44, \#45\\ \#46, \#58, \#59, \#78, \#101\\ \#103\end{tabular} &
-  \begin{tabular}[c]{@{}l@{}}\#11, \#22, \#28, \#41, \#44\\ \#45, \#46, \#58, \#59, \#78\\ \#101, \#103\end{tabular} &
-  \begin{tabular}[c]{@{}l@{}}\#04, \#41, \#44, \#45, \#46\\ \#78\end{tabular} \\ \hline
-\textbf{\begin{tabular}[c]{@{}l@{}}Verificação \\ dedutiva\end{tabular}}     & \#24, \#99 & \#05, \#24, \#99 & \#05, \#24, \#99, \#100 & \#09       \\ \hline
+\begin{tabular}{l|l|l|l|l}
+\textbf{Abordagem}                                                                    & \multicolumn{4}{c}{\textbf{Procedimentos manuais}}                                                                                                                                                                                                                                                                                                                     \\ 
+\cline{2-5}
+                                                                                      & \textbf{Tradução de código}  & \textbf{Obtenção do modelo}                                                                                  & \begin{tabular}[c]{@{}l@{}}\textbf{Especificação das }\\\textbf{ propriedades}\end{tabular}                        & \begin{tabular}[c]{@{}l@{}}\textbf{Análise e interpretação}\\\textbf{ dos resultados}\end{tabular}  \\ 
+\hline
+\begin{tabular}[c]{@{}l@{}}\textbf{Análise }\\\textbf{ estática}\end{tabular}         & \#69                         &                                                                                                              & \#07                                                                                                               &                                                                                                     \\ 
+\hline
+\begin{tabular}[c]{@{}l@{}}\textbf{Execução }\\\textbf{ simbólica}\end{tabular}       & \#97                         &                                                                                                              & \#07, \#38, \#97, \#104                                                                                            & \#38                                                                                                \\ 
+\hline
+\begin{tabular}[c]{@{}l@{}}\textbf{Demonstração }\\\textbf{ de teoremas}\end{tabular} &                              & \#03, \#43                                                                                                   & \#38, \#43                                                                                                         & \#38, \#43                                                                                          \\ 
+\hline
+\begin{tabular}[c]{@{}l@{}}\textbf{Model }\\\textbf{ checking}\end{tabular}           & \#11, \#22, \#45, \#59, \#78 & \begin{tabular}[c]{@{}l@{}}\#11, \#22, \#41, \#44, \#45\\ \#46, \#58, \#59, \#78, \#101\\ \#103\end{tabular} & \begin{tabular}[c]{@{}l@{}}\#11, \#22, \#28, \#41, \#44\\ \#45, \#46, \#58, \#59, \#78\\ \#101, \#103\end{tabular} & \begin{tabular}[c]{@{}l@{}}\#04, \#41, \#44, \#45, \#46\\ \#78\end{tabular}                         \\ 
+\hline
+\begin{tabular}[c]{@{}l@{}}\textbf{Verificação }\\\textbf{ dedutiva}\end{tabular}     & \#24, \#99                   & \#05, \#24, \#99                                                                                             & \#05, \#24, \#99, \#100                                                                                            & \#09                                                                                                \\
+\hline
 \end{tabular}
 \fdadospesquisa
 \end{table}
